[package]
name = "wlock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.7.0"
users = "0.11"
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.0", features = ["client", "staging"] }
xkb = "0.3.0"
tempfile = "3.6.0"
