[package]
name = "wlock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.0", features = ["client", "staging"] }
wayland-egl = "0.30.0"
khronos-egl = { version = "5.0.0", features = ["static"] }
gl = "0.14.0"
pam = "0.7.0"
users = "0.11.0"
tempfile = "3.6.0"
xkbcommon = "0.5.0"
